refactor: DTO를 record로 변경
- LectureRequest, LectureResponse를 record로 변경
- 불변성 보장 및 보일러플레이트 코드 제거
- Stream API 개선